# cpp-gemm

./: .gitignore  CMakeLists.txt  README.md  gemm  gemm.f90  gemms.hpp  main.cpp  np.py  requirements.txt
fortran/: gemm.f90
gemm/: cxx.hpp  neon.hpp
